--- a/css/style.css
+++ b/css/style.css
@@ -308,24 +308,26 @@ main {
 
 .modal form::after {
             content: "";
-            width: 300px;
-            height: 300px;
+            width: 290px;
+            height: 290px;
             background-image: url(../src/img/white.svg);
             background-repeat: no-repeat;
             background-position: center;
+            background-size: contain;
             position: absolute;
-            left: 0;
-            top: 0
+            left: 5px;
+            top: 5px
         }
 
 @media(min-width: 768px) {
 
         .modal form::after {
-                width: 434px;
-                height: 371px;
+                width: 455px;
+                height: 385px;
                 background-image: url("../src/img/white2.svg");
-                top: 8px;
-                background-size: contain
+                top: 2px;
+                background-size: contain;
+                left: -10px
         }
             }
 
@@ -359,6 +361,7 @@ main {
             font-size: 0.875rem;
             padding: 5px 10px;
             font-family: Determination;
+            border-bottom: 1px solid #A2A2A3;
         }
 
 .content__input-btn  {
@@ -367,9 +370,11 @@ main {
         }
 
 .content__input-btn input {
-                background: rgba(253, 221, 1, .4);
+                background: #FF8D00;
                 cursor: pointer;
                 max-width: 255px;
+                color: #FFF;
+                font-size: 1rem;
             }
 
 .reviews {
