--- a/src/css/header.css
+++ b/src/css/header.css
@@ -112,6 +112,8 @@ main {
 
     &__wrap {
         position: relative;
+        max-width: 245px;
+        margin: 0 auto;
 
         &-brif {
 
@@ -234,6 +236,10 @@ main {
     &__adress  {
         text-align: center;
         margin-bottom: 20px;
+
+        @media(min-width: 1200px){
+            font-size: 30px;
+        }
     }
 
     &__email {
@@ -243,12 +249,20 @@ main {
         a {
             text-decoration: none;
             color: #000;
+
+            @media(min-width: 1200px){
+                font-size: 30px;
+            }
             
         }
     }
 
     &__copyr {
         text-align: center;
+
+        @media(min-width: 1200px){
+            font-size: 26px;
+        }
     }
 
 }
@@ -293,6 +307,7 @@ main {
         position: relative;
         padding: 20px 50px;
 
+
         @media(min-width: 768px) {
             width: 435px;
             height: 390px;
@@ -302,6 +317,7 @@ main {
         input {
             position: relative;
             z-index: 9;
+            /* padding: 20px 50px; */
         }
 
         &::after {
@@ -333,10 +349,12 @@ main {
     &__title {
         font-size: 16px;
         color: #000;
-        opacity: .6;
         position: relative;
         z-index: 5;
-        padding: 10px 0 5px;
+        font-size: 20px;
+        width: 100%;
+        border-bottom: 1px solid #DEDEDE;
+        margin-bottom: 25px;
     }
 
     &__input {
@@ -354,20 +372,33 @@ main {
             border: 1px solid #DEDEDE;
             border-radius: 5px;
             font-size: 14px;
-            padding: 5px 10px;
+            /* padding: 5px 10px; */
             font-family: Determination;
             border-bottom: 1px solid #A2A2A3;
+            height: 25px;
         }
 
         &-btn  {
             text-align: right;
+            margin-bottom: 0px;
 
             input {
-                background: #FF8D00;
+                background-image: url("../src/img/btnsend.svg");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                width: 170px;
+                height: 30px;
                 cursor: pointer;
                 max-width: 255px;
                 color: #FFF;
                 font-size: 16px;
+
+                @media( min-width: 1024px) {
+                    font-size: 20px;
+                    width: 195px;
+                    height: 40px;
+                }
             }
             
         }
