--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,8 @@ main {
 
 .game__wrap {
         position: relative;
+        max-width: 245px;
+        margin: 0 auto;
     }
 
 @media(min-width: 768px) {
@@ -233,8 +235,15 @@ main {
 
 .footer__adress  {
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 20px
     }
+
+@media(min-width: 1200px){
+
+    .footer__adress  {
+            font-size: 1.875rem
+    }
+        }
 
 .footer__email {
         text-align: center;
@@ -243,13 +252,28 @@ main {
 
 .footer__email a {
             text-decoration: none;
-            color: #000;
+            color: #000
             
         }
 
+@media(min-width: 1200px){
+
+        .footer__email a {
+                font-size: 1.875rem
+            
+        }
+            }
+
 .footer__copyr {
-        text-align: center;
+        text-align: center
     }
+
+@media(min-width: 1200px){
+
+    .footer__copyr {
+            font-size: 1.625rem
+    }
+        }
 
 .modal {
     display: none;
@@ -304,6 +328,7 @@ main {
 .modal form input {
             position: relative;
             z-index: 9;
+            /* padding: 20px 50px; */
         }
 
 .modal form::after {
@@ -334,10 +359,12 @@ main {
 .content__title {
         font-size: 1rem;
         color: #000;
-        opacity: .6;
         position: relative;
         z-index: 5;
-        padding: 10px 0 5px;
+        font-size: 1.25rem;
+        width: 100%;
+        border-bottom: 1px solid #DEDEDE;
+        margin-bottom: 25px;
     }
 
 .content__input {
@@ -359,23 +386,39 @@ main {
             border: 1px solid #DEDEDE;
             border-radius: 5px;
             font-size: 0.875rem;
-            padding: 5px 10px;
+            /* padding: 5px 10px; */
             font-family: Determination;
             border-bottom: 1px solid #A2A2A3;
+            height: 25px;
         }
 
 .content__input-btn  {
             text-align: right;
+            margin-bottom: 0px;
             
         }
 
 .content__input-btn input {
-                background: #FF8D00;
+                background-image: url("../src/img/btnsend.svg");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                width: 170px;
+                height: 30px;
                 cursor: pointer;
                 max-width: 255px;
                 color: #FFF;
-                font-size: 1rem;
+                font-size: 1rem
             }
+
+@media( min-width: 1024px) {
+
+            .content__input-btn input {
+                    font-size: 1.25rem;
+                    width: 195px;
+                    height: 40px
+            }
+                }
 
 .reviews {
     display: none;
