--- a/src/css/header.css
+++ b/src/css/header.css
@@ -203,6 +203,11 @@ main {
         justify-content: space-around;
         margin-bottom: 20px;
 
+        @media(min-width: 1200px){
+            width: 30%;
+            justify-content: flex-start;
+        }
+
         a {
 
             span {
@@ -212,6 +217,10 @@ main {
                 background-repeat: no-repeat;
                 background-size: contain;
                 background-position: center;
+
+                @media(min-width: 1200px){
+                    margin-right: 15px;
+                }
             }
         }
 
@@ -239,6 +248,7 @@ main {
 
         @media(min-width: 1200px){
             font-size: 30px;
+            width: 33%;
         }
     }
 
@@ -252,6 +262,7 @@ main {
 
             @media(min-width: 1200px){
                 font-size: 30px;
+                width: 30%;
             }
             
         }
@@ -376,6 +387,7 @@ main {
             font-family: Determination;
             border-bottom: 1px solid #A2A2A3;
             height: 25px;
+            padding-left: 10px;
         }
 
         &-btn  {
@@ -393,6 +405,8 @@ main {
                 max-width: 255px;
                 color: #FFF;
                 font-size: 16px;
+                background-color: transparent;
+                border: none;
 
                 @media( min-width: 1024px) {
                     font-size: 20px;
