--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,12 +1,12 @@
 <main>
   <div class="main">
     <div class="container">
-      <a href="index.html"><div class="main__logo"></div></a>
+      <a href="index.php"><div class="main__logo"></div></a>
       <div class="main__title">ВЫВЕСТИ БИЗНЕС НА СЛЕДУЮЩИЙ УРОВЕНЬ </div>
       <div class="mian__game game">
         <div class="game__title">НАЧАТЬ ИГРУ</div>
-        <a href="emailto:123123123" class="game__link game__link-no">НЕ ЗНАЮ ЧЕГО ХОЧУ</a>
-        <a href="emailto:123123123" class="game__link game__link-yes">ЗНАЮ ЧЕГО ХОЧУ</a>
+        <div class="game__link game__link-no">НЕ ЗНАЮ ЧЕГО ХОЧУ</div>
+        <div class="game__link game__link-yes">ЗНАЮ ЧЕГО ХОЧУ</div>
       </div>
     </div>
   </div>
@@ -21,13 +21,24 @@
           <a href="https://vk.com/club188161415" target="_blank"><span class="links-vk"></span></a>
           <a href="https://www.instagram.com/biz_up.by/" target="_blank"><span class="links-inst"></span></a>
         </div>
-        <div class="footer__adress ">Г. МИНСК УЛ. ТИМИРЯЗЕВА 65</div>
+        <div class="footer__adress ">Г. МИНСК УЛ. ТИМИРЯЗЕВА 65A</div>
         <div class="footer__email">
           <a href="mailto:project.bizup@gmail.com">project.bizup@gmail.com</a>
         </div>
       </div>
       <div class="footer__copyr">
-        ©2020   Разработано BizUp Studio 
+        <div class="footer__copyr-item copyr__icon">
+          <a href="viber://chat?number=375296386774" target="_blank"><span class="copyr__icon-viber"></span></a>
+          <a href="https://wa.me/375296386774" target="_blank"><span class="copyr__icon-whatsapp"></span></a>
+          <a href="https://t.me/" target="_blank"><span class="copyr__icon-teleg"></span></a>
+        </div>
+        <div class="footer__copyr-item copyr__text">
+          ©2020   Разработано BizUp Studio 
+        </div>
+        <div class="footer__copyr-item copyr__tel">
+          <a href="tel:+375 29 638 6774">+375 29 638 6774</a>
+        </div>
+        
       </div>
     </div>
   </div>
@@ -61,7 +72,8 @@
           <input type="submit" value="ОТПРАВИТЬ">
         </div>  
         <div class="reviews">
-          <h2>Спасибо!</h2>
+          <h2>Спасибо.</h2>
+          <h3>Мы с Вами свяжемся в самое ближайшее время!</h3>
         </div>
       
       </form>
