--- a/src/components/header.html
+++ b/src/components/header.html
@@ -5,8 +5,14 @@
       <div class="main__title">ВЫВЕСТИ БИЗНЕС НА СЛЕДУЮЩИЙ УРОВЕНЬ </div>
       <div class="mian__game game">
         <div class="game__title">НАЧАТЬ ИГРУ</div>
-        <div class="game__link game__link-no">НЕ ЗНАЮ ЧЕГО ХОЧУ</div>
-        <div class="game__link game__link-yes">ЗНАЮ ЧЕГО ХОЧУ</div>
+        <div class="game__link game__link-no">
+          <span>НЕ ЗНАЮ ЧЕГО ХОЧУ</span>
+          <div class="game__help-no"></div>
+        </div>
+        <div class="game__link game__link-yes"> 
+          <span>ЗНАЮ ЧЕГО ХОЧУ</span>
+          <div class="game__help-yes"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -24,7 +30,7 @@
         <div class="footer__adress ">Г. МИНСК УЛ. ТИМИРЯЗЕВА 65A</div>
         <div class="footer__email">
           <a href="mailto:project.bizup@gmail.com">project.bizup@gmail.com</a>
-        </div>
+        </div> 
       </div>
       <div class="footer__copyr">
         <div class="footer__copyr-item copyr__icon">
@@ -74,6 +80,7 @@
         <div class="reviews">
           <h2>Спасибо.</h2>
           <h3>Мы с Вами свяжемся в самое ближайшее время!</h3>
+          <input type="submit" value="">
         </div>
       
       </form>
